# crbutils

./: README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
notebooks/: modeval_dev .ipynb
src/crbutils/: TODO.txt  dt.py  io.py  modeval.py  sample.py
tests/: test1.py  test_1.py  test_modeval.py  test_version_match.py
