[tool.poetry]
name = "crbutils"
version = "0.1.0"
description = "A DS utility library"
authors = ["Christopher Bonham"]
readme = "README.md"
packages = [{include = "crbutils", from = "src"}]

# We need to cut out the unwanted dependancies
[tool.poetry.dependencies]
python = "3.9.13"
appdirs = "1.4.4"
attrs = "22.2.0"
build = "0.10.0"
cachecontrol = "0.12.11"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
cleo = "2.0.1"
click = "8.1.3"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.6"
docker-pycreds = "0.4.0"
dulwich = "0.21.3"
exceptiongroup = "1.1.0"
filelock = "3.9.0"
flake8 = "6.0.0"
gitdb = "4.0.10"
gitpython = "3.1.31"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.0.0"
iniconfig = "2.0.0"
installer = "0.6.0"
jaraco-classes = "3.2.3"
joblib = "1.2.0"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
mccabe = "0.7.0"
more-itertools = "9.1.0"
msgpack = "1.0.4"
numpy = "1.24.2"
packaging = "23.0"
pandas = "1.5.3"
pathtools = "0.1.2"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "2.6.2"
plotly = "5.13.1"
pluggy = "1.0.0"
poetry = "1.4.0"
poetry-core = "1.5.1"
poetry-plugin-export = "1.3.0"
protobuf = "4.22.0"
psutil = "5.9.4"
ptyprocess = "0.7.0"
pycodestyle = "2.10.0"
pyflakes = "3.0.1"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
pytest = "7.2.1"
python-dateutil = "2.8.2"
pytz = "2022.7.1"
pywin32-ctypes = "0.2.0"
pyyaml = "6.0"
rapidfuzz = "2.13.7"
requests = "2.28.2"
requests-toolbelt = "0.10.1"
scikit-learn = "1.2.1"
scipy = "1.10.1"
sentry-sdk = "1.16.0"
setproctitle = "1.3.2"
shellingham = "1.5.0.post1"
six = "1.16.0"
smmap = "5.0.0"
tenacity = "8.2.1"
threadpoolctl = "3.1.0"
tomli = "2.0.1"
tomlkit = "0.11.6"
trove-classifiers = "2023.2.20"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
virtualenv = "20.16.5"
wandb = "0.13.10"
webencodings = "0.5.1"
zipp = "3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
