[tool.poetry]
name = "crbutils"
version = "1.0.0"
description = "A DS utility library"
authors = ["Christopher Bonham"]
readme = "README.md"
packages = [{include = "crbutils", from = "src"}]

[tool.poetry.dependencies]
python = "3.9.13"
plotly = ">=5.13.1"
numpy = ">=1.24.2"
scikit-learn = ">=1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

