[tool.poetry]
name = "crbutils"
version = "0.1.0"       # Make sure you ALSO change the version in __init__.py
description = "A DS utility library"
authors = ["Christopher Bonham"]
readme = "README.md"
packages = [{include = "crbutils", from = "src"}]

[tool.poetry.dependencies]
python = "3.9.13"
plotly = ">=5.13.1"
numpy = ">=1.24.2"
scikit-learn = ">=1.2.1"
toml = ">=0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

